--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <model-viewer src="scene.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" camera-orbit="-357.5deg 68.39deg 7.195m" field-of-view="17.78deg" min-camera-orbit="auto 36deg auto" max-camera-orbit="auto 101deg auto" auto-rotate>
+        <model-viewer src="nile.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" camera-orbit="-357.5deg 68.39deg 7.195m" field-of-view="17.78deg" min-camera-orbit="auto 36deg auto" max-camera-orbit="auto 101deg auto" auto-rotate>
             <button class="Hotspot" slot="hotspot-1" data-position="-1.3199187028172368m -9.252931900677108m 10.55534888705879m" data-normal="0.2655689072597292m 0.3691995783331107m 0.8905980164224075m" data-visibility-attribute="visible">
                 <div class="HotspotAnnotation">CROCODILE</div>
             </button><button class="Hotspot" slot="hotspot-2" data-position="-0.6301012476239338m -8.778891838078803m 9.733958475463965m" data-normal="-0.877966543666589m 0.007878884816626654m 0.47865715431422273m" data-visibility-attribute="visible">
