--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <model-viewer src="nile.glb" ar ar-modes="webxr" camera-controls tone-mapping="commerce"
+        <model-viewer src="nile.glb" ar ar-modes="webxr quick-look" camera-controls tone-mapping="commerce"
             poster="poster.webp" shadow-intensity="1" camera-orbit="-357.5deg 68.39deg 7.195m" field-of-view="15.78deg"
             min-camera-orbit="auto 36deg auto" max-camera-orbit="auto 101deg auto" auto-rotate>
             <button class="Hotspot" slot="hotspot-1"
